--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dayjs": "^1.11.19",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-kakao-maps-sdk": "^1.2.0",
     "react-router-dom": "^7.9.6",
     "sweetalert2": "^11.26.3"
   },
